# nnopt

./: README.md  pyproject.toml
models/mobilenetv2_cifar10/baseline/: metadata.json
models/mobilenetv2_cifar10/fp32/baseline/: metadata.json
models/mobilenetv2_cifar10/fp32/l1_struct_prune_0.1/: metadata.json
models/mobilenetv2_cifar10/fp32/l1_struct_prune_0.3/: jit_script.pt  jit_trace.pt  metadata.json  model.pt  state_dict.pt
models/mobilenetv2_cifar10/fp32/l1_struct_prune_0.5/: jit_script.pt  jit_trace.pt  metadata.json  (+2 more)
models/mobilenetv2_cifar10/l1_structured_pruning_0.1/: metadata.json
models/mobilenetv2_cifar10/l1_structured_pruning_0.3/: metadata.json  model.pt
models/mobilenetv2_cifar10/l1_structured_pruning_0.5/: metadata.json  model.pt
models/mobilenetv2_cifar10/l1_structured_pruning_0.7/: metadata.json  model.pt
models/mobilenetv2_cifar10/l1_unstructured_pruning_0.5/: metadata.json
models/mobilenetv2_cifar10/l1_unstructured_pruning_0.7/: metadata.json
models/mobilenetv2_cifar10/l1_unstructured_pruning_0.9/: metadata.json
models/onnx_exports/: mobilenetv2_cifar10_baseline_qat_int8.onnx  mobilenetv2_cifar10_pruned_fp32.onnx  mobilenetv2_cifar10_qat_int8.onnx  mobilenetv2_cifar10_unstructured_pruned_qat_int8.onnx
notebooks/: 01_data_model_loading.ipynb  02_pruning.ipynb  03_quantization.ipynb  04_export_infer_onnx.ipynb  04_export_infer_onnx_openvino.ipynb  mobilenetv2_cifar10_qat_int8_jit.pt
src/nnopt/model/: analysis.py  const.py  eval.py  export.py  prune.py  quant.py  train.py  utils.py
src/nnopt/recipes/: mobilenetv2_cifar10.py
(+42 files in other folders)
