[project]
name = "nnopt"
version = "0.0.1"
description = "A demo for optimizing neural network inference throughoutput and storage to use on embedded device."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.33.0",
    "ipykernel>=6.29.5",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "onnxscript>=0.3.0",
    "psutil>=7.0.0",
    "pynvml>=12.0.0",
    "torch>=2.7.1",
    "torch-pruning>=1.5.2",
    "torch-tensorrt>=2.7.0",
    "torchaudio>=2.7.1",
    "torchdistill>=1.1.3",
    "torchvision>=0.22.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nnopt*"]
namespaces = false